<resources>
    <string name="app_name">Pantry</string>
    <string name="generic_auth_error">something went wrong, try again later</string>
    <string name="create_your_account">Create your account</string>
    <string name="email_label">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">password</string>
    <string name="missing_credentials">Please complete both fields.</string>
    <string name="log_in">Log In</string>
    <string name="welcome">Welcome to your virtual pantry!</string>
    <string name="description_list_create_new">Create new item</string>
    <string name="empty_recipe_list_text">Nothing here</string>
    <string name="edit_recipe_recipe_name_hint">Name your Recipe</string>
    <string name="edit_recipe_servings_hint">How many servings will this make?</string>
    <string name="edit_ingredient_name_hint">name</string>
    <string name="edit_ingredient_amount_hint">Quantity</string>
    <string name="done">Done</string>
    <string name="button_create_another">Create Another</string>
    <string name="create_ingredient_success">Ingredient Created Successfully</string>
    <string name="create_ingredient_validation_error">Ingredient invalid or already exists</string>
    <string name="create_ingredient_unknown_error">An error occurred, please try again</string>
    <string name="error_message_unauthorized">Not logged in, please log in again.</string>
    <string name="error_message_unknown_error">Something went wrong, please try again</string>
    <string name="plus">+</string>
    <string name="edit_recipe_empty_ingredients_error">Recipe must have ingredients!</string>
    <string name="edit_recipe_empty_steps_error">Recipe must have at least one step!</string>
    <string name="edit_recipe_validation_error">Recipe already exists or is invalid</string>
    <string name="edit_recipe_operation_success">Recipe Created</string>
    <string name="add_ingredient_search_hint">Search ingredients</string>
    <string name="invitations_empty_list_text">No pending invitations :(</string>
    <string name="invitations_name_text">from: %s</string>
    <string name="invitations_invitation_declined">Invitation Declined</string>
    <string name="invitations_invitation_accepted">Invitation Accepted</string>
    <string name="create_invitation_email_hint">Email to invite</string>
    <string name="create_invitation_send">Send Invitation</string>
    <string name="create_invitation_invitation_sent">Invitation Sent</string>
    <string name="ok">OK</string>
    <string name="add_ingredient_invalid_ammount">Please select a quantity larger than 0</string>
    <string name="hint_add">add</string>
    <string name="menu_save_title">Save</string>
    <string name="menu_checkout_title">Checkout</string>
    <string name="item_quantity">%s %s</string>
    <string name="shopping_list_error_empty_list">A shopping list must have at least one item</string>
    <string name="shopping_list_error_nothing_bought">You must buy at least one item from this list!</string>
    <string name="shopping_list_error_no_name">List must have a name</string>
    <string name="no_buy_nothing">Cannot set quantity to 0</string>
    <string name="oh_no">oh no</string>
    <string name="label_recipe_steps">Steps:</string>
    <string name="menu_create_shopping_list">Create shopping list</string>
    <string name="edit">edit</string>
    <string name="recipe_details_make">Make recipe</string>
    <string name="recipe_not_enough_ingredients">You don\'t have enough ingredients to make this</string>
    <string name="enjoy_your_meal">Enjoy your meal!</string>
    <string name="add">Add</string>
    <string name="remove">remove</string>
    <string name="recipes">Recipes</string>
    <string name="shopping_lists">Shopping Lists</string>
    <string name="invitations">Invitations</string>
    <string name="create_account_user_name_label">Username</string>
    <string name="log_out">Log Out</string>
    <string name="your_profile">Your Profile</string>
    <string name="profile_updated_success">Profile Updated</string>
    <string name="logged_out_successfully">Good Bye</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shopping_list_default_name">Shopping List</string>
    <string name="recipe_name_label">Name:</string>
    <string name="recipe_servings_label">Servings:</string>
    <string name="recipe_card_can_make">You can make this!</string>
    <string name="recipe_card_missing_prefix">Missing: %s</string>
</resources>