<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        tools:context=".ingredients.ui.CreateIngredientActivity">

    <EditText
            android:id="@+id/ingredient_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/edit_ingredient_name_hint"
            android:importantForAutofill="no"
            android:inputType="textAutoComplete"
            app:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:id="@+id/quantity_amount"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/edit_ingredient_amount_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingredient_name" />

    <Spinner
            android:id="@+id/unit_spinner"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/quantity_amount"
            app:layout_constraintTop_toBottomOf="@+id/ingredient_name" />

    <Button
            android:id="@+id/done_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:text="@string/done"
            app:layout_constraintBottom_toBottomOf="parent" />

    <Button
            android:id="@+id/create_another_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="8dp"
            android:text="@string/button_create_another"
            app:layout_constraintBottom_toTopOf="@+id/done_button" />

</androidx.constraintlayout.widget.ConstraintLayout>